--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BusPlanApp</title>
 
-    <link rel="icon" href="./public/assets/favicons/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="./public/assets/favicons/favicon.png" type="image/png" sizes="32x32" />
-    <link rel="apple-touch-icon" href="./public/assets/favicons/apple-touch-icon.png" />
+    <link rel="icon" href="./assets/favicons/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/assets/favicons/favicon.png" type="image/png" sizes="32x32" />
+    <link rel="apple-touch-icon" href="/assets/favicons/apple-touch-icon.png" />
     
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="./public/assets/favicons/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="./public/assets/favicons/android-chrome-192x192.png">
+    <meta name="msapplication-TileImage" content="/assets/favicons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicons/android-chrome-192x192.png">
   </head>
   <body>
     <div id="root"></div>
